# es-ojt-data

./: .gitignore  README.md  pyproject.toml
data/: .gitignore
data/preprocessing/: bylines.csv  categories.csv  dictionary.csv  dictionary_0.csv  dictionary_1.csv  providers.csv  reporters.csv
data/raw/: providers.csv
jupyter notebook/load/: 1. category 적재.ipynb  2. provider 적재.ipynb  3. reporter 적재.ipynb  4. byline 적재.ipynb  5. news 적재.ipynb  6-1. dictionary 적재.ipynb  6-2. dictionary.ipynb  6-3 dictionary.ipynb  6. dictionary 적재.ipynb
jupyter notebook/preprocessing/: 1. load news data.ipynb  2. providers.ipynb  3. categories.ipynb  4-1. Bylines.ipynb  4-2. bylines - korean.ipynb  4-3. bylines.ipynb  4-4. bylines.ipynb  5. reporters.ipynb
