[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["CalMaru <cal@42maru.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.5"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
